--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,27 @@
-version: '3'
+version: '3.5'
 
 services:
-  postgres:
+  db:
     image: postgres:latest
+    restart: always
     environment:
       POSTGRES_DB: air_quality
       POSTGRES_USER: saber_psql_user
       POSTGRES_PASSWORD: saber_psql_password
+    container_name: postgres
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
     ports:
       - '5433:5432'
 
-  # nest:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - '3031:3031'
-  #   depends_on:
-  #     - postgres
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nest-docker-postgres
+    ports:
+      - '3031:3031'
+    depends_on:
+      - db
+    volumes:
+      - ./src:/app/src
