--- a/.env.docker
+++ b/.env.docker
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=5433
+DB_HOST=db
+DB_PORT=5432
 DB_USERNAME=saber_psql_user
 DB_PASSWORD=saber_psql_password
 DB_NAME=air_quality
