--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@nestjs/core": "^11.1.5",
     "@nestjs/platform-express": "^11.1.5",
     "@nestjs/schedule": "4.0.0",
-    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/typeorm": "10.0.1",
-    "axios": "1.8.2",
+    "axios": "^1.13.2",
     "pg": "8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "5.0.0",
-    "typeorm": "0.3.19"
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
